Update to fix SAML error on back button, hover over works for sign out box, http redirect

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -45,11 +45,11 @@
             </div>
             <div class="navbar-right">
                 <div>
-                    <span class="trigger" ng-click="show=!show">
+                    <span class="trigger" ng-mouseenter="show=true" ng-mouseleave="show=false">
                         <img src= '<%=user.image%>' style="width: 59px; height: 59px;"/>
                     </span>
                 </div>
-                <div class="profile" ng-show="show">
+                <div class="profile" ng-show="show" ng-mouseenter="show=true" ng-mouseleave="show=false">
                     <div class="photo">
                         <img src= '<%=user.image%>' style="width: 59px; height: 59px;"/>
                     </div>
