--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,12 +1,12 @@
 .navbar-default {
-    background-color: #4A7023;
+    background-color:  #2C3539;
     border-color: #20313D;
     border-radius: 0px;
     margin-bottom: 0px;
 }
 
 .navbar-bottom {
-    background-color: #82613e;
+    background-color: #81613E;
 }
 
 .content {
