--- a/public/style/ticker.css
+++ b/public/style/ticker.css
@@ -108,8 +108,8 @@
 }
 
 /* OTHER COLORS */
-.blue { background: #3B5323 }
-.blue span { background: #4A7023 }
+.blue { background: #81613E }
+.blue span { background: #81613E }
 .red { background: #d23435 }
 .red span { background: #c22b2c }
 .green { background: #699B67 }
