--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -20,6 +20,7 @@
     <script src="js/controllers/MainCtrl.js"></script>
 
     <!-- ANGULAR CUSTOM -->
+    <script src="js/services/authService.js"></script>
     <script src="js/services/application.js"></script>
     <script src="js/services/default.js"></script>
     <script src="js/services/notification.js"></script>
