--- a/public/views/main.html
+++ b/public/views/main.html
@@ -28,28 +28,28 @@
     <br/>
     <div class="list-group">
         <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">WARNING: eCommerce Business Transaction Issues.</h4>
-            <p class="list-group-item-text">Business Transaction response time is much higher than normal</p>
+            <h4 class="list-group-item-heading">Business and industry react to the General Election result</h4>
+            <p class="list-group-item-text">Business has reacted positively to the Conservative election victory as it provides continuity and stability</p>
         </a>
         <br/>
         <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">IDC CxO Pan European Digital Transformation Summit</h4>
-            <p class="list-group-item-text">2-3 July 2015 in Paris: do you know more about the agenda?</p>
+            <h4 class="list-group-item-heading">New structures 'tougher than Kevlar</h4>
+            <p class="list-group-item-text">Researchers have created new structures that stretch to up to seven times their length and remain stronger than Kevlar.</p>
         </a>
         <br/>
         <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">#Pennyforyourthought15</h4>
-            <p class="list-group-item-text">Hadoop offering will enhance Atos’ new-born Big Data & Security service line services</p>
+            <h4 class="list-group-item-heading">Funding boost for Royal Navy's Successor programme</h4>
+            <p class="list-group-item-text">Britain’s most advanced military submarine programme has received £285m in investment.</p>
         </a>
         <br/>
         <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">TBR publish report</h4>
-            <p class="list-group-item-text">Atos: Expanding in Cloud, Cybersecurity, Big Data and the U.S.” for the fourth calendar quarter of 2014</p>
+            <h4 class="list-group-item-heading">Lockheed laser blasts truck from over a mile away</h4>
+            <p class="list-group-item-text">Lockheed Martin has deployed a 30kW fibre laser weapon to disable the engine of a truck.</p>
         </a>
         <br/>
         <a href="#" class="list-group-item">
-            <h4 class="list-group-item-heading">Atos ranked as a MAJOR PLAYER in IDC MarketScape</h4>
-            <p class="list-group-item-text">Worldwide Professional Services Firms for SAP Suite on HANA in Utilities 2015 Vendor Assessment.</p>
+            <h4 class="list-group-item-heading">BAE Systems and MoD sign £859m Type 26 contract</h4>
+            <p class="list-group-item-text">BAE Systems has signed a contract worth £859m with the Ministry of Defence to continue with the progression of the Type 26 Global Combat Ship.</p>
         </a>
     </div>
 </div>
