--- a/public/views/main.html
+++ b/public/views/main.html
@@ -23,7 +23,7 @@
 </div>
 <div class="col-md-4 col-md-pull-8 col-sm-4 col-sm-pull-8">
     <div class="header">
-        <img src="img/DigitalTulipHeader.jpg" alt="workspace" class="img-responsive" />
+        <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/logo.png" alt="workspace" class="img-responsive" />
     </div>
     <br/>
     <div class="list-group">
