--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,12 +1,13 @@
 .navbar-default {
-    background-color: #20313D;
-    border-color: #20313D;
+    background-color: white;
+    border-color: white;
     border-radius: 0px;
     margin-bottom: 0px;
 }
 
 .navbar-bottom {
-    background-color: #66A3C7;
+    background-color: #006DAB;
+    height:10px;
 }
 
 .content {
