--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -41,7 +41,7 @@
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#" alt="Atos"><img src="img/AtosHome.png" alt="Atos"/></a>
+                <a class="navbar-brand" href="#" alt="Canopy"><img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/logo.png" alt="Canopy"/></a>
             </div>
             <div class="navbar-right">
                 <div>
