--- a/public/style/base.css
+++ b/public/style/base.css
@@ -6,8 +6,10 @@
 }
 
 .navbar-bottom {
+    border-color: rgb(0, 109, 171);
+    box-shadow: rgb(51, 51, 51) 0px 2px 10px;
     background-color: #006DAB;
-    height:10px;
+    height:6px;
 }
 
 .content {
