--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,7 +1,7 @@
   <div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
               <div class="ticker blue">
                 <div class="viewport">  
-                        <strong>Latest News - </strong>
+                        <span style="background:none; background-image:none; background-color: none;"><strong>Latest News - </strong><span>
                         
                     <div ng-repeat="notification in notifications" class="boxtext"><div><a href="https://cloudcanopyatospov.service-now.com/nav_to.do?uri=kb_view.do?sys_kb_id={{notification.sys_id}}" target="_new">{{ notification.short_description }}</a></div></div>
 
