--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,5 +1,5 @@
   <div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
-              <div class="ticker blue">
+              <div class="ticker blue_gradient">
                 <div class="viewport">  
                         <span style="background:none; background-image:none; background-color: none; box-shadow: 0px 0px 0px 0px;"><strong>Latest News - </strong></span>
                         
