--- a/public/style/ticker.css
+++ b/public/style/ticker.css
@@ -1,11 +1,10 @@
 .ticker {
   width: 100%;
   padding: 1em 1em;
-  height: 35px;
+  height: 40px;
   overflow: hidden;
   position: relative;
   float: left;
-  box-shadow: inset 0 -15px 30px rgba(0,0,0,0.4), 0 5px 10px rgba(0,0,0,0.5);
   margin: 20px auto;
   overflow: hidden;
   border-radius: 4px;
@@ -109,6 +108,7 @@
 
 /* OTHER COLORS */
 .blue { background: #66A3C7 }
+.blue_gradient { background: linear-gradient(to bottom,#1279ac 0%,#00679a 100%); }
 .blue span { background: #2c66be }
 .red { background: #d23435 }
 .red span { background: #c22b2c }
