footer and canopy css

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -6,11 +6,16 @@
     <meta charset="UTF-8">
     <base href="/">
    
-    <title > DigitalTulip </title>
+    <title > Canopy </title>
     <!-- CSS -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/ticker.css">
+    <!--CANOPY_CLOUD CSS-->
+    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_xE-rWrJf-fncB6ztZfd2huxqgxu4WO-qwma6Xer30m4.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_AALg2lhSbxkaOIeXwyb7NgKdTDkuyc9kZK7zMvdTYpo.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_KGZIC13WObjTv9HIvcy5B9YBZ8unAgt-z4GttyKH444.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_QG4TzX8G4VGmHN4aQWj7lomiqIIIydK9P3uB2EL3CZg.css" media="all" />
     <!-- custom styles -->
     <!-- JS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -71,7 +76,56 @@
        </div> 
 
      
-      
+      <footer class="footer-wrapper">
+  <div class="back-to-top-wrapper"><div class="inner-margins"><div class="back-to-top back-to-top-processed">Go to the top</div></div></div>
+  <div class="logos-partenaires">
+    <p>We are proud to be <strong>platinum</strong> partners</p>
+    <img src="sites/all/themes/canopytheme/images/partner4.png">
+    <img src="sites/all/themes/canopytheme/images/partner3.png">
+    <img src="sites/all/themes/canopytheme/images/partner2.png">
+    <img src="sites/all/themes/canopytheme/images/partner1.png">
+  </div>
+  <div class="footer-sitemap">
+    <div class="inner-margins">
+      <div class="footer-menu clearfix">
+        <ul class="menu"><li class="first expanded we-are mid-249"><span class="nolink">we are</span><ul class="menu"><li class="first leaf about-canopy mid-297"><a href="/about-canopy">About Canopy</a></li>
+<li class="leaf leadership-team mid-296"><a href="/leadership-team">Leadership team</a></li>
+<li class="leaf parent-investors mid-298"><a href="/parent-investors">Parent investors</a></li>
+<li class="leaf careers mid-496"><a href="/careers">Careers</a></li>
+<li class="last leaf contact-us mid-437"><a href="/contact-us">Contact us</a></li>
+</ul></li>
+<li class="expanded we-do mid-251"><span class="nolink">we do</span><ul class="menu"><li class="first leaf consulting mid-497"><a href="/consulting">Consulting</a></li>
+<li class="leaf infrastructure mid-471"><a href="/infrastructure">Infrastructure</a></li>
+<li class="leaf platform mid-473"><a href="/platform">Platform</a></li>
+<li class="last leaf software mid-495"><a href="/software">Software</a></li>
+</ul></li>
+<li class="expanded we-live mid-252"><span class="nolink">we live</span><ul class="menu"><li class="first leaf news mid-353"><a href="/news">News</a></li>
+<li class="leaf events mid-465"><a href="/events">Events</a></li>
+<li class="last leaf press-room mid-523"><a href="/press-room">Press Room</a></li>
+</ul></li>
+<li class="last expanded ressources mid-467"><span class="ressources nolink">ressources</span><ul class="menu"><li class="first leaf whitepapers mid-469"><a href="/whitepapers">Whitepapers</a></li>
+<li class="leaf videos mid-509"><a href="/videos">Videos</a></li>
+<li class="last leaf infographics mid-470"><a href="/infographics">Infographics</a></li>
+</ul></li>
+</ul>      </div>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <div class="inner-margins">
+      <div class="content-wrapper">
+        <div class="footer-social">
+          <ul>
+            <li><a class="facebook" href="https://www.facebook.com/Canopy?fref=ts" target="_blank"><span class="element-invisible">Facebook</span></a></li>
+            <li><a class="twitter" href="https://twitter.com/CanopyCloud" target="_blank"><span class="element-invisible">Twitter</span></a></li>
+            <li><a class="linkedin" href="https://www.linkedin.com/company/canopy-cloud" target="_blank"><span class="element-invisible">Linkedin</span></a></li>
+            <li><a class="youtube" href="https://www.youtube.com/user/canopycloud" target="_blank"><span class="element-invisible">Youtube</span></a></li>
+          </ul>
+        </div>
+        <div class="footer-links">© Canopy 2015 &nbsp;&nbsp;&nbsp; <a href="/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;&nbsp; <a href="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;&nbsp; <a href="/cookie-policy">Cookie Policy</a></div>
+      </div>
+    </div>
+  </div>
+</footer>
 </body>
 
 </html>
