favicon&more css

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,11 +11,18 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/ticker.css">
-    <!--CANOPY_CLOUD CSS-->
+    <!--CANOPY_CLOUD CSS & JAVASCRIPT-->
     <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_xE-rWrJf-fncB6ztZfd2huxqgxu4WO-qwma6Xer30m4.css" media="all" />
     <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_AALg2lhSbxkaOIeXwyb7NgKdTDkuyc9kZK7zMvdTYpo.css" media="all" />
     <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_KGZIC13WObjTv9HIvcy5B9YBZ8unAgt-z4GttyKH444.css" media="all" />
     <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_QG4TzX8G4VGmHN4aQWj7lomiqIIIydK9P3uB2EL3CZg.css" media="all" />
+    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_mDxCF8ImVBb6oiL7Rq6KarwvxmvDV5PjnhYNE29pt_0.css" media="print" />
+    <script type="text/javascript" src="http://canopy-cloud.com/sites/default/files/js/js__b2dN1hBHXjzJ0jvPA4CPNjNVjVGVjWE-cFCotnHgYw.js"></script>
+    <script type="text/javascript" src="http://canopy-cloud.com/sites/default/files/js/js_aWiQ9fvPkOXyPwxBu2QprjK_mqzskAq4obsa04reQJE.js"></script>
+    <script type="text/javascript" src="http://canopy-cloud.com/sites/default/files/js/js_H_fQQs6YzSpJattfvjztBMRR3cTHZOhujsMR3CC_MNQ.js"></script>
+    <script type="text/javascript" src="http://canopy-cloud.com/sites/default/files/js/js__hGkzFqryHSI6LpB1teEyH9NADnwU7POsfSex0m812c.js"></script>
+    <script type="text/javascript" src="http://canopy-cloud.com/sites/default/files/js/js_CElkxqTv5ayEvjLI4j5YjvWJUUvA5n3i7WiVHdb3rEo.js"></script>
+<script type="text/javascript">
     <!-- custom styles -->
     <!-- JS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -38,7 +45,7 @@
     <script src="lib/javascript-detect-element-resize/detect-element-resize.js"></script>
     <script src="lib/angular-gridster/angular-gridster.js"></script>
 
-    <link rel="icon" type="image/png" href="img/Logo_tulip.png"/>
+    <link rel="icon" type="image/ico" href="http://canopy-cloud.com/sites/default/files/favicon.ico"/>
     
 </head>
 
