--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,5 +1,5 @@
 .navbar-default {
-    background-color: #f6f5f5;
+    background-color: #F2F1F1;
     border-color: white;
     border-radius: 0px;
     margin-bottom: 0px;
@@ -13,7 +13,7 @@
 
 .content {
     margin: 10px;
-    background-color: #f6f5f5;
+    background-color: #F2F1F1;
 }
 
 .navbar-default .navbar-nav > .dropdown > a {
@@ -209,9 +209,14 @@
 }
 
 html {
-    background-color: #f6f5f5;
+    background-color: #F2F1F1;
 }
 
 body {
-    background-color: #f6f5f5;
+    background-color: #F2F1F1;
+}
+
+.list-group-item{
+    background-color: #F2F1F1;
+
 }
