--- a/public/style/base.css
+++ b/public/style/base.css
@@ -1,5 +1,5 @@
 .navbar-default {
-    background-color: #F2F1F1;
+    background-color: #FFFFFF;
     border-color: white;
     border-radius: 0px;
     margin-bottom: 0px;
