css changes to footer

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -74,10 +74,10 @@
   <footer class="footer-wrapper">
       <div class="logos-partenaires">
         <p>We are proud to be <strong>platinum</strong> partners</p>
-        <img src="sites/all/themes/canopytheme/images/partner4.png"/>
-        <img src="sites/all/themes/canopytheme/images/partner3.png"/>
-        <img src="sites/all/themes/canopytheme/images/partner2.png"/>
-        <img src="sites/all/themes/canopytheme/images/partner1.png"/>
+        <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner4.png"/>
+        <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner3.png"/>
+        <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner2.png"/>
+        <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner1.png"/>
       </div>
       <div class="footer-sitemap">
         <div class="inner-margins">
