--- a/public/style/base.css
+++ b/public/style/base.css
@@ -215,3 +215,40 @@ html {
 body {
     background-color: #F2F1F1;
 }
+
+.footer-wrapper{
+
+    position: relative;
+    background-color: #fff;
+    z-index: 9;
+    border-top: 1px solid #a5a4a4;
+}
+
+.logos-partenaires{
+    text-align: center;
+    padding-bottom: 40px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #0066a1;
+    margin-top: 20px;
+}
+
+.footer-sitemap{
+    background-color: #006dab;
+    padding: 1px 0;
+}
+
+.inner-margins{
+      max-width: 1280px;
+  margin: 0 auto;
+}
+
+.footer-menu{
+    list-style: none;
+  margin: 30px 0;
+  display:block;
+}
+
+.menu{
+    list-style: none;
+}
