--- a/public/style/base.css
+++ b/public/style/base.css
@@ -214,6 +214,10 @@ html {
 
 body {
     background-color: #F2F1F1;
+     margin:0;
+   padding:0;
+   height:100%;
+   padding-bottom:400px;
 }
 
 .footer-wrapper{
@@ -254,8 +258,7 @@ body {
 }
 
 footer {
-    width:100%;
     position:absolute;
-    bottom:0;
-    left:0;
+   bottom:0;
+   width:100%;
 }
