--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/ticker.css">
+    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_QG4TzX8G4VGmHN4aQWj7lomiqIIIydK9P3uB2EL3CZg.css" media="all" />
     <!-- custom styles -->
     <!-- JS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
