--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,9 +1,10 @@
-<!doctype html>
-<html lang="en">
 
-<head >
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <meta charset="UTF-8">
+  <title>Canopy</title>
     <base href="/">
    
     <title > Canopy </title>
@@ -11,8 +12,8 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/ticker.css">
-    <link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_QG4TzX8G4VGmHN4aQWj7lomiqIIIydK9P3uB2EL3CZg.css" media="all" />
-    <!-- custom styles -->
+<link type="text/css" rel="stylesheet" href="http://canopy-cloud.com/sites/default/files/css/css_QG4TzX8G4VGmHN4aQWj7lomiqIIIydK9P3uB2EL3CZg.css" media="all" />
+<!-- custom styles -->
     <!-- JS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
