--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -84,24 +84,24 @@
   <div class="footer-sitemap">
     <div class="inner-margins">
       <div class="footer-menu clearfix">
-        <ul class="menu"><li class="first expanded we-are mid-249"><span class="nolink">we are</span><ul class="menu"><li class="first leaf about-canopy mid-297"><a href="/about-canopy">About Canopy</a></li>
-<li class="leaf leadership-team mid-296"><a href="/leadership-team">Leadership team</a></li>
-<li class="leaf parent-investors mid-298"><a href="/parent-investors">Parent investors</a></li>
+        <ul class="menu"><li class="first expanded we-are mid-249"><span class="nolink">we are</span><ul class="menu"><li class="first leaf about-canopy mid-297"><a href="http://canopy-cloud.com/about-canopy">About Canopy</a></li>
+<li class="leaf leadership-team mid-296"><a href="http://canopy-cloud.com/leadership-team">Leadership team</a></li>
+<li class="leaf parent-investors mid-298"><a href="http://canopy-cloud.com/parent-investors">Parent investors</a></li>
 <li class="leaf careers mid-496"><a href="/careers">Careers</a></li>
-<li class="last leaf contact-us mid-437"><a href="/contact-us">Contact us</a></li>
+<li class="last leaf contact-us mid-437"><a href="http://canopy-cloud.com/contact-us">Contact us</a></li>
 </ul></li>
-<li class="expanded we-do mid-251"><span class="nolink">we do</span><ul class="menu"><li class="first leaf consulting mid-497"><a href="/consulting">Consulting</a></li>
-<li class="leaf infrastructure mid-471"><a href="/infrastructure">Infrastructure</a></li>
-<li class="leaf platform mid-473"><a href="/platform">Platform</a></li>
-<li class="last leaf software mid-495"><a href="/software">Software</a></li>
+<li class="expanded we-do mid-251"><span class="nolink">we do</span><ul class="menu"><li class="first leaf consulting mid-497"><a href="http://canopy-cloud.com/consulting">Consulting</a></li>
+<li class="leaf infrastructure mid-471"><a href="http://canopy-cloud.com/infrastructure">Infrastructure</a></li>
+<li class="leaf platform mid-473"><a href="http://canopy-cloud.com/platform">Platform</a></li>
+<li class="last leaf software mid-495"><a href="http://canopy-cloud.com/software">Software</a></li>
 </ul></li>
-<li class="expanded we-live mid-252"><span class="nolink">we live</span><ul class="menu"><li class="first leaf news mid-353"><a href="/news">News</a></li>
-<li class="leaf events mid-465"><a href="/events">Events</a></li>
-<li class="last leaf press-room mid-523"><a href="/press-room">Press Room</a></li>
+<li class="expanded we-live mid-252"><span class="nolink">we live</span><ul class="menu"><li class="first leaf news mid-353"><a href="http://canopy-cloud.com/news">News</a></li>
+<li class="leaf events mid-465"><a href="http://canopy-cloud.com/events">Events</a></li>
+<li class="last leaf press-room mid-523"><a href="http://canopy-cloud.com/press-room">Press Room</a></li>
 </ul></li>
-<li class="last expanded ressources mid-467"><span class="ressources nolink">ressources</span><ul class="menu"><li class="first leaf whitepapers mid-469"><a href="/whitepapers">Whitepapers</a></li>
-<li class="leaf videos mid-509"><a href="/videos">Videos</a></li>
-<li class="last leaf infographics mid-470"><a href="/infographics">Infographics</a></li>
+<li class="last expanded ressources mid-467"><span class="ressources nolink">ressources</span><ul class="menu"><li class="first leaf whitepapers mid-469"><a href="http://canopy-cloud.com/whitepapers">Whitepapers</a></li>
+<li class="leaf videos mid-509"><a href="http://canopy-cloud.com/videos">Videos</a></li>
+<li class="last leaf infographics mid-470"><a href="http://canopy-cloud.com/infographics">Infographics</a></li>
 </ul></li>
 </ul>      </div>
     </div>
@@ -117,7 +117,7 @@
             <li><a class="youtube" href="https://www.youtube.com/user/canopycloud" target="_blank"><span class="element-invisible">Youtube</span></a></li>
           </ul>
         </div>
-        <div class="footer-links">&copy; Canopy 2015 &nbsp;&nbsp;&nbsp; <a href="/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;&nbsp; <a href="/terms-conditions">Terms & Conditions</a> &nbsp;&nbsp;&nbsp; <a href="/cookie-policy">Cookie Policy</a></div>
+        <div class="footer-links">&copy; Canopy 2015 &nbsp;&nbsp;&nbsp; <a href="http://canopy-cloud.com/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;&nbsp; <a href="http://canopy-cloud.com/terms-conditions">Terms & Conditions</a> &nbsp;&nbsp;&nbsp; <a href="http://canopy-cloud.com/cookie-policy">Cookie Policy</a></div>
       </div>
     </div>
   </div>
