--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -72,7 +72,7 @@
         <div ng-view></div>
        </div> 
         
-      <footer class="footer-wrapper">
+      <footer class="footer-wrapper" style="margin-top:100%;">
   <div class="back-to-top-wrapper"><div class="inner-margins"><div class="back-to-top">Go to the top</div></div></div>
   <div class="logos-partenaires">
     <p>We are proud to be <strong>platinum</strong> partners</p>
