--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -73,20 +73,16 @@
         <div ng-view></div>
        </div> 
         
-      <footer class="footer-wrapper" style="margin-top:100%;">
-  <div class="back-to-top-wrapper"><div class="inner-margins"><div class="back-to-top">Go to the top</div></div></div>
-  <div class="logos-partenaires">
-    <p>We are proud to be <strong>platinum</strong> partners</p>
+<footer class="footer-wrapper">
+<div class="companys">
+    <p class="">We are proud to be <strong>platinum</strong> partners</p>
 <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner4.png"/>
         <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner3.png"/>
         <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner2.png"/>
         <img src="http://canopy-cloud.com/sites/all/themes/canopytheme/images/partner1.png"/>
-  </div>
- 
-  <div class="footer-bottom" style="border-top: 1px solid grey;">
-    <div class="inner-margins">
-      <div class="content-wrapper">
-        <div class="footer-social">
+</div>
+<div class="footer-foot">
+<div class="footer-social">
           <ul>
             <li><a class="facebook" href="https://www.facebook.com/Canopy?fref=ts" target="_blank"><span class="element-invisible">Facebook</span></a></li>
             <li><a class="twitter" href="https://twitter.com/CanopyCloud" target="_blank"><span class="element-invisible">Twitter</span></a></li>
@@ -94,10 +90,10 @@
             <li><a class="youtube" href="https://www.youtube.com/user/canopycloud" target="_blank"><span class="element-invisible">Youtube</span></a></li>
           </ul>
         </div>
-        <div class="footer-links">&copy; Canopy 2015 &nbsp;&nbsp;&nbsp; <a href="http://canopy-cloud.com/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;&nbsp; <a href="http://canopy-cloud.com/terms-conditions">Terms & Conditions</a> &nbsp;&nbsp;&nbsp; <a href="http://canopy-cloud.com/cookie-policy">Cookie Policy</a></div>
-      </div>
-    </div>
-  </div>
+<div class="footer-links">
+© Canopy 2015 &nbsp;&nbsp;&nbsp; <a href="/privacy-policy">Privacy Policy</a> &nbsp;&nbsp;&nbsp; <a href="/terms-conditions">Terms &amp; Conditions</a> &nbsp;&nbsp;&nbsp; <a href="/cookie-policy">Cookie Policy</a>
+</div>
+</div>
 </footer>
 </body>
 
