--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -69,7 +69,7 @@
         </div>
     </nav>
     <div class="container-fluid navbar-bottom">&nbsp;</div>
-    <div class="container-fluid content">
+    <div class="container-fluid content" style="  min-height: 600px;">
         <div ng-view></div>
        </div> 
         
