min height of container to 790p

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -48,12 +48,12 @@
             <div class="navbar-right">
                 <div>
                     <span class="trigger" ng-mouseenter="show=true" ng-mouseleave="show=false">
-                        <img src= '<%=user.image%>' style="width: 59px; height: 59px;"/>
+                        <img src="img/female-icon.jpg" style="width: 59px; height: 59px;"/>
                     </span>
                 </div>
                 <div class="profile" ng-show="show" ng-mouseenter="show=true" ng-mouseleave="show=false">
                     <div class="photo">
-                        <img src= '<%=user.image%>' style="width: 59px; height: 59px;"/>
+                        <img src="img/female-icon.jpg" style="width: 59px; height: 59px;"/>
                     </div>
                     <div class="detail">
                         <h4><%=user.displayName%></h4>
