--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -48,7 +48,7 @@
             <div class="navbar-right">
                 <div>
                     <span class="trigger" ng-mouseenter="show=true" ng-mouseleave="show=false">
-                        <img src="img/female-icon.jpg" style="width: 59px; height: 59px;"/>
+                        <img src="img/female-icon.jpg" style="width: 59px; height: 59px; border: 1px solid grey;"/>
                     </span>
                 </div>
                 <div class="profile" ng-show="show" ng-mouseenter="show=true" ng-mouseleave="show=false">
