changed inline js to remote

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,3 +1,9 @@
+ <script>
+    function cloudFabric() {
+        alert('Do you want to deploy OSCF?');
+        window.location = '{{obj.url}}';
+    }
+</script>
   <div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
               <div class="ticker blue_gradient">
                 <div class="viewport">  
@@ -10,8 +16,7 @@
     <h1>{{displayDate | date:'EEEE dd MMMM yyyy'}}</h1>
     <div gridster="gridsterOpts" class='gridsterOpts'>
         <li gridster-item="obj" ng-repeat="obj in applications" ng-style="{'background-color': '{{obj.bgcolour}}'}" class="tile">
-            <a onclick="alert('Do you want to deploy OSCF?');
-            window.location = '{{obj.url}}';" target="{{obj.name}}">
+            <a onclick="{{obj.name}}()" target="{{obj.name}}">
                 <img src="{{obj.img}}" class="img-responsive" />
                 <div class="appname">{{obj.name}}</div>
                 <appdesc>
@@ -20,12 +25,7 @@
             </a>
         </li>
     </div>
-   <!-- <script>
-        function tileLink {
-            alert('Do you want to deploy OSCF?');
-            window.location = '{{obj.url}}';
-        } -->
-    </script>
+
 </div>
 <div class="col-md-4 col-md-pull-8 col-sm-4 col-sm-pull-8">
     <div class="header">
