--- a/public/views/main.html
+++ b/public/views/main.html
@@ -1,8 +1,3 @@
- <script>
-    function cloudFabric() {
-        alert('Do you want to deploy OSCF?');
-    }
-</script>
   <div class="col-md-8 col-md-push-4 col-sm-8 col-sm-push-4">
               <div class="ticker blue_gradient">
                 <div class="viewport">  
@@ -15,7 +10,7 @@
     <h1>{{displayDate | date:'EEEE dd MMMM yyyy'}}</h1>
     <div gridster="gridsterOpts" class='gridsterOpts'>
         <li gridster-item="obj" ng-repeat="obj in applications" ng-style="{'background-color': '{{obj.bgcolour}}'}" class="tile">
-            <a onclick="cloudFabric()" target="{{obj.name}}">
+            <a onclick="alert('Do you want to deploy OSCF?');" target="{{obj.name}}">
                 <img src="{{obj.img}}" class="img-responsive" />
                 <div class="appname">{{obj.name}}</div>
                 <appdesc>
