--- a/public/views/main.html
+++ b/public/views/main.html
@@ -10,7 +10,7 @@
     <h1>{{displayDate | date:'EEEE dd MMMM yyyy'}}</h1>
     <div gridster="gridsterOpts" class='gridsterOpts'>
         <li gridster-item="obj" ng-repeat="obj in applications" ng-style="{'background-color': '{{obj.bgcolour}}'}" class="tile">
-            <a onclick="alert('Do you want to deploy OSCF?');" target="{{obj.name}}">
+            <a onclick="alert('Do you want to deploy {{obj.name}}?');" target="{{obj.name}}">
                 <img src="{{obj.img}}" class="img-responsive" />
                 <div class="appname">{{obj.name}}</div>
                 <appdesc>
