moved script to index.ejs

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -39,6 +39,13 @@
     
 </head>
 
+<script>
+    function tileConfirmation() {
+        alert("Are you sure?");
+    }
+</script>
+
+
 <body ng-app="XaaP" ng-controller="DefaultController">
     <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
