tile popup update

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -40,7 +40,7 @@
 </head>
 
 <script>
-    function tileConfirmation() {
+    function cloudFabric() {
         alert("Are you sure?");
     }
 </script>
