--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -40,9 +40,15 @@
 </head>
 
 <script>
+$( document ).ready(function() {
+    
+    document.getElementById("cloudFabric").addEventListener("click", function(){ alert("Are you sure?"); });
+
     function tileConfirmation() {
-        alert("Are you sure?");
+        alert('Are you sure?')
     }
+
+ });   
 </script>
 
 
