added inline onload

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -39,6 +39,10 @@
     
     <script>
 
+    function cflistener() {
+        alert("cloudFabric is loaded");
+    }
+
     $(window).load(function(){
         el = document.getElementById("cloudFabric");
         if (el) {
@@ -50,7 +54,7 @@
     });
 
     </script>
-    
+
 </head>
 
 
