--- a/public/views/main.html
+++ b/public/views/main.html
@@ -9,7 +9,7 @@
                 </div>
             </div>
     <h1>{{displayDate | date:'EEEE dd MMMM yyyy'}}</h1>
-    <div gridster="gridsterOpts" class='gridsterOpts'>
+    <div gridster="gridsterOpts" class='gridsterOpts' onload="cflistener()">
         <li gridster-item="obj" ng-repeat="obj in applications" ng-style="{'background-color': '{{obj.bgcolour}}'}" class="tile">
             <a id="{{obj.name}}" target="{{obj.name}}">
                 <img src="{{obj.img}}" class="img-responsive" />
