--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -37,7 +37,7 @@
 
     <link rel="icon" type="image/ico" href="http://canopy-cloud.com/sites/default/files/favicon.ico"/>
     
-    <script>
+    <script defer>
 
     function cflistener() {
         alert("cloudFabric is loaded");
