new cf account update

--- a/public/views/cloud-canopy.html
+++ b/public/views/cloud-canopy.html
@@ -1,6 +1,7 @@
 <div>
-	test
-	<button ng-click="pressed()">Click me!</button>
+		Do you want to create a new Cloud Fabric account?
+		<a ng-click="newCFAccount()">Yes</a>
+		<a href="/#/">No</a>
 
 </div>
 
