--- a/public/views/cloud-canopy.html
+++ b/public/views/cloud-canopy.html
@@ -1,7 +1,8 @@
-<div>
-		Do you want to create a new Cloud Fabric account?
-		<a ng-click="newCFAccount()">Yes</a>
-		<a href="/#/">No</a>
+<div id="cloudFabricContent">
+
+		<div>Do you want to create a new Cloud Fabric account now?</div>
+		<div class="canopy-btn" ng-click="newCFAccount()">Yes</div>
+		<div class="canopy-btn" href="/#/">No</div>
 
 </div>
 
