fixed 'no' button on new cf account

--- a/public/views/cloud-canopy.html
+++ b/public/views/cloud-canopy.html
@@ -2,7 +2,7 @@
 
 		<div>Do you want to create a new Cloud Fabric account now?</div>
 		<div class="canopy-btn" ng-click="newCFAccount()">Yes</div>
-		<div class="canopy-btn" href="/#/">No</div>
+		<a href="/#/"><div class="canopy-btn">No</div></a>
 
 </div>
 
