--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -21,12 +21,15 @@
     <script src="js/controllers/DefaultCtrl.js"></script>
     <script src="js/controllers/MainCtrl.js"></script>
     <script src="js/controllers/CanopyCtrl.js"></script>
+    <script src="js/controllers/NewsCtrl.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="js/services/application.js"></script>
     <script src="js/services/default.js"></script>
     <script src="js/services/notification.js"></script>
     <script src="js/services/cloudfabric.js"></script>
+    <script src="js/services/news.js"></script>
+
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
