--- a/public/views/main.html
+++ b/public/views/main.html
@@ -4,7 +4,7 @@
                 <div class="viewport">  
                         <span style="background:none; background-image:none; background-color: none; box-shadow: 0px 0px 0px 0px;"><strong>Latest News - </strong></span>
                         
-                    <div ng-repeat="notification in notifications" class="boxtext"><div><a href="https://cloudcanopyatospov.service-now.com/nav_to.do?uri=kb_view.do?sys_kb_id={{notification.sys_id}}" target="_new">{{ notification.short_description }}</a></div></div>
+                    <div ng-repeat="news_item in news_items" class="boxtext"><div><a href="https://cloudcanopyatospov.service-now.com/nav_to.do?uri=kb_view.do?sys_kb_id={{notification.sys_id}}" target="_new">{{ news_item.title }}</a></div></div>
 
                 </div>
             </div>
